--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,13 @@
                                 <input type="file" id="file" name="file" required>
                             </div>
                             <br>
+                            <div class="accordion">Advanced Settings ▼</div>
+                            <div class="accordion-panel">
+                                <br>
+                                Max clip length: <span id="clipLength">30</span>s
+                                <input type="range" min="10" max="60" step="5" value="30" name="maxClipLength" oninput="clipLength.innerText = this.value">
+                            </div>
+                            <br>
                             <div class="form-group">
                                 <input class="btn btn-lg btn-success btn-block" type="submit">
                             </div>
@@ -49,6 +56,26 @@
             </div>
         </div>
     </div>
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                /* Toggle between adding and removing the "active" class,
+                to highlight the button that controls the panel */
+                this.classList.toggle("active");
+
+                /* Toggle between hiding and showing the active panel */
+                var panel = this.nextElementSibling;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+    </script>
 </body>
 
 </html>
